@@ -40,8 +40,7 @@
 ARCH_SRCDIR	= $(TOPDIR)/arch/$(CONFIG_ARCH)/src
 ifeq ($(CONFIG_ARCH_AVR32),y)
 ARCH_SUBDIR	= avr32
-endif
-ifeq ($(CONFIG_ARCH_AVR),y)
+else ifeq ($(CONFIG_ARCH_AVR),y)
 ARCH_SUBDIR	= avr
 endif
 
